Bug 461892 - Unnecessary margin between panels and panel-touching drawers/dropdowns with 2+ panels on one screen edge
Summary: Unnecessary margin between panels and panel-touching drawers/dropdowns with 2...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Panel (other bugs)
Version First Reported In: master
Platform: Arch Linux Linux
: HI minor
Target Milestone: 1.0
Assignee: veggero
URL:
Keywords:
: 462730 463461 463569 463843 464964 465042 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-11-15 23:30 UTC by 2anwe
Modified: 2023-02-06 18:04 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27
Sentry Crash Report:


Attachments
Unnecessary panel space (3.87 MB, video/mp4)
2022-11-15 23:30 UTC, 2anwe
Details

Note You need to log in before you can comment on or make changes to this bug.
Description 2anwe 2022-11-15 23:30:02 UTC
Created attachment 153788 [details]
Unnecessary panel space

SUMMARY
Please watch the attached screen recording and observe how unnecessary space appear. 

STEPS TO REPRODUCE
1. Create a panel.
2. Place the panel on the same side as any other panel.
3. Unnecessary space will appear.

OBSERVED RESULT
2+ panels on one side create unnecessary space.

EXPECTED RESULT
2+ panels on one side without any unnecessary space.

SOFTWARE/OS VERSIONS
KDE Plasma: 5.26.3
KDE Frameworks: 5.99
Qt Version: 5.15.7
Kernel version: 5.15.78-1-lts
Graphics platform: X11

ADDITIONAL INFORMATION
CPU: 12 x 11th Gen Intel Core i5-11400H
Memory: 7.6 GB
GPU: NVIDIA GeForce RTX 3060
Manufacturer: LENOVO
The product's name: 82JH
System version: Legion 5 15ITH6H
Comment 1 veggero 2022-12-08 12:03:07 UTC
*** Bug 462730 has been marked as a duplicate of this bug. ***
Comment 2 veggero 2023-01-05 11:46:02 UTC
*** Bug 463569 has been marked as a duplicate of this bug. ***
Comment 3 veggero 2023-01-05 11:56:40 UTC
*** Bug 463461 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2023-01-06 15:44:43 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2485
Comment 5 Nate Graham 2023-01-09 00:57:44 UTC
Git commit 40f396524933dd91d62099a0a9b4df1afaca9b02 by Nate Graham, on behalf of Niccolò Venerandi.
Committed on 09/01/2023 at 00:57.
Pushed by ngraham into branch 'master'.

Fix calculation of available screen rect with multiple panels on the same screen edge

As an example, if previously we had two 30px panels one next to each other, the code
would reserve a 60px area, rather than just a 30px area.
FIXED-IN: 5.27

M  +10   -4    shell/shellcorona.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/40f396524933dd91d62099a0a9b4df1afaca9b02
Comment 6 Nate Graham 2023-01-09 20:24:08 UTC
*** Bug 463843 has been marked as a duplicate of this bug. ***
Comment 7 veggero 2023-01-30 16:42:02 UTC
*** Bug 465042 has been marked as a duplicate of this bug. ***
Comment 8 Nate Graham 2023-02-06 18:04:47 UTC
*** Bug 464964 has been marked as a duplicate of this bug. ***