Fix calculation of available screen rect with multiple panels on the same screen edge

As an example, if previously we had two 30px panels one next to each other, the code
would reserve a 60px area, rather than just a 30px area.

BUG: 461892
FIXED-IN: 5.27